test/Sema/diag_get_vs_set_subscripts.code
// RUN: %target-typecheck-verify-language

// https://github.com/apple/language/issues/48727
do {
  enum Key: Int {
    case aKey
    case anotherKey // expected-note {{'anotherKey' declared here}}
  }

  class C {
    var dict: [Key: String] = [:]
    fn what() -> Void {
      dict[.notAKey] = "something" // expected-error {{type 'Key' has no member 'notAKey'; did you mean 'anotherKey'?}}
    }

    subscript(i: Int) -> Int { get {} }

    subscript(j: Double) -> Double { get {} set {} }
  }

  immutable c = C()
  immutable one: Int = 1
  // Should choose the settable subscript to find a problem with, not the get-only subscript
  c[one] = 2.5 // expected-error {{cannot convert value of type 'Int' to expected argument type 'Double'}}
}
